--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.23",
-    "@types/lunr": "^2.3.2",
     "@types/node": "12.12.14",
     "@types/react": "16.9.13",
     "@types/react-dom": "16.9.4",
@@ -13,15 +12,13 @@
     "express": "^4.17.1",
     "fuzzy": "^0.1.3",
     "lodash": "^4.17.15",
-    "lunr": "^2.3.8",
-    "node-fetch": "^2.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "2.13.8",
-    "redux-thunk": "2.3.0",
+    "redux-saga": "^1.1.3",
     "typescript": "3.7.2"
   },
   "scripts": {
@@ -45,8 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.2"
   }
 }
