--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "@types/node": "12.12.14",
     "@types/react": "16.9.13",
     "@types/react-dom": "16.9.4",
+    "@types/react-leaflet": "^2.5.0",
     "@types/react-redux": "^7.1.5",
     "axios": "^0.19.0",
     "express": "^4.17.1",
     "fuzzy": "^0.1.3",
+    "leaflet": "^1.6.0",
     "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-leaflet": "^2.6.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
