--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "origo-bysykkel",
+  "name": "origo-bysykel",
   "version": "0.1.0",
   "private": true,
+  "author": "erlendaxelsson",
   "dependencies": {
-    "@types/jest": "24.0.23",
-    "@types/node": "12.12.14",
-    "@types/react": "16.9.13",
-    "@types/react-dom": "16.9.4",
-    "@types/react-leaflet": "^2.5.0",
-    "@types/react-redux": "^7.1.5",
     "axios": "^0.19.0",
-    "express": "^4.17.1",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
     "fuzzy": "^0.1.3",
     "leaflet": "^1.6.0",
     "lodash": "^4.17.15",
@@ -22,14 +19,18 @@
     "redux": "^4.0.4",
     "redux-devtools-extension": "2.13.8",
     "redux-saga": "^1.1.3",
-    "typescript": "3.7.2"
+    "typescript": "3.7.2",
+    "@types/jest": "24.0.23",
+    "@types/node": "12.12.14",
+    "@types/react": "16.9.13",
+    "@types/react-dom": "16.9.4",
+    "@types/react-leaflet": "^2.5.0",
+    "@types/react-redux": "^7.1.5"
   },
   "scripts": {
+    "docker": "react-scripts build && docker build -t erlend/bysykel .",
     "host": "node index.js",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
